--- a/initializr-generator/src/main/resources/templates/starter-pom.xml
+++ b/initializr-generator/src/main/resources/templates/starter-pom.xml
@@ -15,7 +15,7 @@
 		<groupId>{{mavenParentGroupId}}</groupId>
 		<artifactId>{{mavenParentArtifactId}}</artifactId>
 		<version>{{mavenParentVersion}}</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<properties>
