--- a/initializr-generator/src/main/resources/templates/parent-pom.xml
+++ b/initializr-generator/src/main/resources/templates/parent-pom.xml
@@ -6,7 +6,7 @@
 	<groupId>{{groupId}}</groupId>
 	<artifactId>{{artifactId}}</artifactId>
 	<version>{{version}}</version>
-	<packaging>{{packaging}}</packaging>
+	<packaging>pom</packaging>
 
 	<name>{{name}}</name>
 	<description>{{description}}</description>
