--- a/initializr-generator/src/main/resources/templates/module-pom.xml
+++ b/initializr-generator/src/main/resources/templates/module-pom.xml
@@ -25,6 +25,7 @@
 		{{#buildPropertiesVersions}}
 		<{{key}}>{{#value}}{{.}}{{/value}}</{{key}}>
 		{{/buildPropertiesVersions}}
+		<dockerfile.skip>false</dockerfile.skip>
 	</properties>
 
 	<dependencies>
