--- a/initializr-generator/src/main/resources/templates/module-pom.xml
+++ b/initializr-generator/src/main/resources/templates/module-pom.xml
@@ -105,6 +105,10 @@
 		{{/providedDependencies}}
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
