--- a/initializr-web/src/main/resources/templates/home.mustache
+++ b/initializr-web/src/main/resources/templates/home.mustache
@@ -5,7 +5,7 @@
     <link href="//fonts.googleapis.com/css?family=Varela+Round|Montserrat:400,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="{{#linkTo}}/css/customize.css{{/linkTo}}"/>
     <link rel="stylesheet" href="{{#linkTo}}/css/bulma.min.css{{/linkTo}}"/>
-    <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.png"/>
+    <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {{#trackingCode}}
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
