Change frontend parameter style into services

--- a/initializr-web/src/main/resources/templates/home.mustache
+++ b/initializr-web/src/main/resources/templates/home.mustache
@@ -77,7 +77,7 @@ new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
                         {{#content}}
                         <div class="small-top-margin">
                             <label class="checkbox module-checkbox">
-                                <input tabindex="13" type="checkbox" name="style" value="{{id}}">
+                                <input tabindex="13" type="checkbox" name="services" value="{{id}}">
                                 {{name}}
                                 <p class="help-block">{{#description}}{{.}}{{/description}}</p>
                             </label>
