--- a/initializr-web/src/main/resources/templates/home.mustache
+++ b/initializr-web/src/main/resources/templates/home.mustache
@@ -18,23 +18,33 @@ new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 <body>
 <form id="form" action="/starter.zip" method="get" role="form">
     <nav class="navbar header-nav" role="navigation" aria-label="main navigation">
-        <div class="container">
+        <div class="small-container container">
             <div class="navbar-brand">
                 <a class="navbar-item azure-logo">
                     <img src="{{#linkTo}}/img/azure_logo.png{{/linkTo}}" alt="Microsoft Azure">
                 </a>
             </div>
-            <div class="navbar-menu">
+            <div class="navbar-menu is-active">
                 <div class="navbar-start">
                     <h1 class="navbar-item title has-text-white" >
                         Azure Spring Cloud Playground
                     </h1>
                 </div>
+                <div class="navbar-end" id="free_link">
+                    <a href="https://azure.microsoft.com/en-us/free/" title="Free account" target="_blank" >Free account</a>
+                </div>
+                <div class="navbar-end" id="login_link">
+                    <a>Login</a>
+                </div>
+                <div class="navbar-end" id="logout_link">
+                    <a>Logout</a>
+                </div>
             </div>
         </div>
     </nav>
-    <div class="container">
-        <div class="container">
+    <div class="small-container container">
+        <div class="small-container container">
+            <p class="help is-danger app-error"></p>
             <input id="baseDir" name="baseDir" type="hidden" value="{{artifactId.content}}">
 
             <div class="row metadata-row">
@@ -89,7 +99,7 @@ new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
             </div>
             <div class="large-vertical-margin">
                 <p class="has-text-centered">
-                    <button tabindex="12" name="generate-project" type="submit" class="button is-info"
+                    <button tabindex="12" id="generate-project" type="submit" class="button"
                             role="button">
                         Generate Project
                     </button>
@@ -101,7 +111,9 @@ new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 <script src="{{#linkTo}}/js/jquery-3.1.1.min.js{{/linkTo}}"></script>
 <script src="{{#linkTo}}/js/typeahead.bundle.min.js{{/linkTo}}"></script>
 <script src="{{#linkTo}}/js/mousetrap.min.js{{/linkTo}}"></script>
+<script src="{{#linkTo}}/js/adal.min.js{{/linkTo}}"></script>
 <script src="{{#linkTo}}/js/all.js{{/linkTo}}"></script>
 <script src="{{#linkTo}}/js/start.js{{/linkTo}}"></script>
+<script src="{{#linkTo}}/js/auth.js{{/linkTo}}"></script>
 </body>
 </html>
