--- a/initializr-web/src/main/resources/templates/home.mustache
+++ b/initializr-web/src/main/resources/templates/home.mustache
@@ -36,8 +36,16 @@ new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
                 <div class="navbar-end" id="login_link">
                     <a>Login</a>
                 </div>
-                <div class="navbar-end" id="logout_link">
-                    <a>Logout</a>
+                <div class="navbar-end" id="user_dropdown">
+                    <div class="navbar-item has-dropdown is-hoverable">
+                        <a class="truncate" id="logged_user">
+                        </a>
+                        <div class="navbar-dropdown" id="logout_link">
+                            <a class="navbar-item">
+                               Logout
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
