--- a/initializr-web/src/main/resources/static/css/customize.css
+++ b/initializr-web/src/main/resources/static/css/customize.css
@@ -48,7 +48,7 @@ body, button, input, p, select, textarea, label, h1, h2, h3, h4 {
     font-family: 'Segoe UI',SegoeUI,'Segoe WP',Tahoma,Arial,sans-serif;
 }
 
-#login_link, #user_dropdown, #free_link {
+#login_link, #user_dropdown, #free_link, #about_link {
     align-items: center;
     margin-left: 2rem;
 }
@@ -72,7 +72,7 @@ body, button, input, p, select, textarea, label, h1, h2, h3, h4 {
     color: #89c402;
 }
 
-#login_link a, #user_dropdown a, #free_link a {
+#login_link a, #user_dropdown a, #free_link a, #about_link {
     font-weight: 600;
 }
 
