--- a/initializr-web/src/main/resources/templates/home.mustache
+++ b/initializr-web/src/main/resources/templates/home.mustache
@@ -47,6 +47,9 @@ new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
                         </div>
                     </div>
                 </div>
+                <div class="navbar-end" id="about_link">
+                    <a title="{{build.information}}">About</a>
+                </div>
             </div>
         </div>
     </nav>
