Fix typo of acr.repository in parent pom

--- a/initializr-generator/src/main/resources/templates/parent-pom.xml
+++ b/initializr-generator/src/main/resources/templates/parent-pom.xml
@@ -167,7 +167,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<repository>${repository}/${project.name}</repository>
+					<repository>${acr.repository}/${project.name}</repository>
 					<username>${acr.username}</username>
 					<password>${acr.password}</password>
 					<buildArgs>
