Set default acr.repository as demo to avoid breaking local run

--- a/initializr-generator/src/main/resources/templates/parent-pom.xml
+++ b/initializr-generator/src/main/resources/templates/parent-pom.xml
@@ -25,7 +25,7 @@
 				<activeByDefault>true</activeByDefault>
 			</activation>
 			<properties>
-				<repository>demo</repository>
+				<acr.repository>demo</acr.repository>
 			</properties>
 		</profile>
 		<profile>
